# muon-discovery

./: CMakeLists.txt  README.md
muon-discovery/: .gitignore  build.gradle  settings.gradle
muon-discovery-java/: .gitignore  build.gradle  settings.gradle
muon-discovery-java/src/javaCpp/java/io/muoncore/javacpp/: DiscoveryJavaCppSpec.java
muon-discovery-java/src/javaCppGen/java/io/muoncore/discovery/: DiscoveryJni.java
muon-discovery-java/src/main/java/io/muoncore/discovery/multicast/: AutoConfiguration.java  Discovery.java  DiscoveryFactory.java  MulticastDiscovery.java  MulticastDiscoveryFactory.java  ServiceDescriptor.java
muon-discovery-java/src/main/java/io/muoncore/javacpp/: JniStringList.java  JniUriList.java  JniUtil.java
muon-discovery-java/src/test/java/io/muoncore/test/discovery/: TestMulticastDiscovery.java
muon-discovery/src/main/avro/io/munocore/discovery/: ServiceDescriptor.json
muon-discovery/src/main/cpp/io/muoncore/discovery/: ServiceDescriptorServer.cpp
muon-discovery/src/main/header/io/muoncore/discovery/: Discovery.h  DiscoveryOnReady.h  MulticastDiscovery.h  ServiceDescriptor.h  ServiceDescriptorClient.h  ServiceDescriptorServer.h  URI.h
muon-discovery/src/main/header_gen/io/muoncore/discovery/: ServiceDescriptorSer.h
muon-discovery/src/test/cpp/io/muoncore/discovery/: main.cpp
muon-discovery/src/test/headers/io.muoncore.discovery/: Test.h
src/main/cpp/: Discovery.h  MulticastDiscovery.cpp  MulticastDiscovery.h  ServiceDescriptor.h  ServiceDescriptorServer.h  URI.h  main.cpp  main_1.cpp
(+4 files in other folders)
